load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "common_proto",
    srcs = [
        "common.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
      "@com_google_protobuf//:struct_proto",
    ],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "github.com/promotedai/schema/proto/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
    deps = [
      "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":common_go_proto"],
    importpath = "github.com/promotedai/schema/proto/common",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "common_java_proto",
    deps = [":common_proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "common_py_proto",
    srcs = [
        "common.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
      "@com_google_protobuf//:protobuf_python"
    ],
)
