load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_compile", "java_proto_library", "java_grpc_compile")
load("@rules_proto_grpc_python//:defs.bzl", "python_proto_library", "python_grpc_library")


# Protobufs

proto_library(
    name = "delivery_proto",
    srcs = [
        "blender.proto",
        "delivery.proto",
        "execution.proto",
        "pacing.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
      "//proto/common:common_proto",
      "@protobuf//:struct_proto",
    ],
)

java_proto_library(
    name = "delivery_java_proto",
    protos = [":delivery_proto"],
    deps = [
        "//proto/common:common_java_proto",
    ],
    visibility = ["//visibility:public"],
)

# This is similar to the above java_proto_library but generates a .srcjar
# instead of a .jar, meaning we can get the source files from it.
java_proto_compile(
    name = "delivery_java_proto_srcjar",
    protos = [":delivery_proto"],
    visibility = ["//visibility:public"],
)

python_proto_library(
    name = "delivery_py_proto",
    protos = [":delivery_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:common_py_proto",
    ],
)

# GRPC

# proto_library(
#     name = "delivery_grpc_proto",
#     srcs = ["delivery_grpc.proto"],
#     visibility = ["//visibility:public"],
#     deps = [
#       ":delivery_proto",
#     ],
# )

# java_proto_library(
#     name = "delivery_grpc_java_proto",
#     protos = [":delivery_grpc_proto"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":delivery_java_proto",
#     ]
# )

# java_grpc_library(
#     name = "delivery_java_grpc_srcjar",
#     protos = [":delivery_grpc_proto"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":delivery_java_proto",
#     ]
# )

# python_grpc_library(
#     name = "delivery_python_grpc",
#     protos = [":delivery_grpc_proto"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":delivery_py_proto",
#     ]
# )
