load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_compile", "java_proto_library")
load("@rules_proto_grpc_python//:defs.bzl", "python_proto_library")

proto_library(
    name = "event_proto",
    srcs = [
        "event.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:common_proto",
        "//proto/delivery:delivery_proto",
    ],
)

java_proto_library(
    name = "event_java_proto",
    protos = [":event_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:common_java_proto",
        "//proto/delivery:delivery_java_proto",
    ]
)

# This is similar to the above java_proto_library but generates a .srcjar
# instead of a .jar, meaning we can get the source files from it.
java_proto_compile(
    name = "event_java_proto_srcjar",
    protos = [":event_proto"],
    visibility = ["//visibility:public"],
)

python_proto_library(
    name = "event_py_proto",
    protos = [":event_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:common_py_proto",
        "//proto/delivery:delivery_py_proto",
    ]
)
