load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pacing_proto",
    srcs = ["pacing.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_proto"],
)

go_proto_library(
    name = "pacing_go_proto",
    importpath = "github.com/promotedai/schema/proto/pacing",
    proto = ":pacing_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":pacing_go_proto"],
    importpath = "github.com/promotedai/schema/proto/pacing",
    visibility = ["//visibility:public"],
)
